<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/converter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converter_title"
        app:layout_constraintBottom_toBottomOf="@id/currency_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/currency_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="none"
        android:hint="@string/currency_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/converter_title"
        app:layout_constraintBottom_toBottomOf="@id/currency_input_divider"/>

    <View
        android:id="@+id/currency_input_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/myViewBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_input"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/currency_list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_input_divider"
        app:layout_constraintBottom_toBottomOf="@id/currency_output_divider">

        <RadioGroup
            android:id="@+id/currency_input_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/currency_output_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5">
            <RadioButton
                android:id="@+id/input_euro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/euro"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/input_us_dollar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/us_dollar"/>
            <RadioButton
                android:id="@+id/input_japanese_yen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/japanese_yen"/>
            <RadioButton
                android:id="@+id/input_south_korean_won"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/south_korean_won"/>
            <RadioButton
                android:id="@+id/input_pound_sterling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pound_sterling"/>
            <RadioButton
                android:id="@+id/input_mexican_peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mexican_peso"/>
            <RadioButton
                android:id="@+id/input_russian_ruble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/russian_ruble"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/currency_output_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/currency_input_list"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5">
            <RadioButton
                android:id="@+id/output_euro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/euro"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/output_us_dollar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/us_dollar"/>
            <RadioButton
                android:id="@+id/output_japanese_yen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/japanese_yen"/>
            <RadioButton
                android:id="@+id/output_south_korean_won"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/south_korean_won"/>
            <RadioButton
                android:id="@+id/output_pound_sterling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pound_sterling"/>
            <RadioButton
                android:id="@+id/output_mexican_peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mexican_peso"/>
            <RadioButton
                android:id="@+id/output_russian_ruble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/russian_ruble"/>
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <View
        android:id="@+id/currency_output_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/myViewBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_list_container"
        app:layout_constraintBottom_toBottomOf="@id/convert_button"/>

    <Button
        android:text="@string/convert_button_text"
        android:id="@+id/convert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_output_divider"
        app:layout_constraintBottom_toBottomOf="@id/currency_output"/>

    <TextView
        android:id="@+id/currency_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convert_button"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>